infra/k8s/overlays/production/client/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedev-client-service
spec:
  type: NodePort
