infra/k8s/overlays/production/client/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedev-client-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kubedev-client-global-ip
spec:
  defaultBackend:
    service:
      name: kubedev-client-service
      port:
        number: 3001
